test/spec_vectors/nop/fail/module_3.wat
(module (func $type-f32 (result f32) (nop)))